--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="sub_menu_wrap">
             <ul class="menu_bar">
-                <li><a href="">HOME</a></li>
+                <li><a href="https://ajungportfolio-main.netlify.app">HOME</a></li>
                 <li class="on"><a href="">PROFILE</a></li>
                 <li><a href="">WEB</a></li>
                 <li><a href="">VIDEO</a></li>
