--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul class="sub_menu">
                         <li><a href="https://ajungportfolio-sub-history-img.netlify.app">Image</a></li>
                         <li><a href="https://ajungportfolio-sub-history-web.netlify.app">Web</a></li>
-                        <li><a href="https://ajungportfolio-sub-history-video.netlify.app">History</a></li>
+                        <li><a href="https://ajungportfolio-sub-history-video.netlify.app">Video</a></li>
                     </ul>
                 </li>
             </ul>
