--- a/index.html
+++ b/index.html
@@ -32,6 +32,41 @@
                 </li>
             </ul>
         </div>
+        <div class="m_menu_wrap">
+            <div class="menu_btn">
+                <a href="#" class="menu-trigger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+            </div>
+            <ul class="m_menu">
+                <li>
+                    <a href="https://ajungportfolio-main.netlify.app">HOME</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-profile.netlify.app">PROFILE</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-web.netlify.app">WEB</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-video.netlify.app">VIDEO</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-history-img.netlify.app">HISTORY</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-history-img.netlify.app">Image</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-history-web.netlify.app">Web</a>
+                </li>
+                <li>
+                    <a href="https://ajungportfolio-sub-history-video.netlify.app">Video</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <section>
         <div class="contents">
